# wet2mivneiNirNiz

./: CMakeLists.txt  HashTable.cpp  HashTable.h  List.cpp  List.h  Player.cpp  Player.h  Player_UnionFind_Node.cpp  Player_UnionFind_Node.h  README.md  Team.cpp  Team.h  avl_rank.h  main.cpp  test.in  worldcup23a2.cpp  worldcup23a2.h
